fix: remove fetch phase if stored fields are disabled